# sindicopro-sub

./: .env.example  .gitignore  Dockerfile  INTEGRATION_GUIDE.md  README.md  STREAMING_GUIDE.md  TROUBLESHOOTING_422.md  USECOMPLETION_GUIDE.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run_api.py  setup.py  start_api.py  test_api.py  test_api_simple.py  test_aws_redis.py  test_filter_agent.py  test_frontend_integration.py  test_history.py  test_memory.py  test_redis.py  test_streaming.py
db/: chroma.sqlite3
docs/: CHAT_BASICO_API.md  ESTRUTURA_TECNICA.md  EXEMPLO_PRATICO.md  MULTIPLAS_IAS.md  PERGUNTAS_ESCLARECEDORAS.md  SUB_PLANO_IMPLEMENTACAO.md
examples/: api_usage.py  chat_examples.py  nextjs-integration.md
src/sub_crew/: api.py  crew.py  main.py  memory.py  memory_factory.py
src/sub_crew/agents/: __init__.py  filter_agent.py
src/sub_crew/api/: __init__.py  app.py
src/sub_crew/api/models/: __init__.py  chat.py
src/sub_crew/api/routes/: __init__.py  chat.py
src/sub_crew/api/services/: __init__.py  ai_providers.py  chat_service.py
src/sub_crew/config/: agents.yaml  tasks.yaml
