[project]
name = "sub_crew"
version = "0.1.0"
description = "sub-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
sub_crew = "sub_crew.main:run"
run_crew = "sub_crew.main:run"
train = "sub_crew.main:train"
replay = "sub_crew.main:replay"
test = "sub_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
